[gd_scene load_steps=6 format=3 uid="uid://c7efvr77mr45u"]

[ext_resource type="Script" uid="uid://bhovn2pas667j" path="res://Scripts/Screen/main_menu.gd" id="1_1ehe0"]
[ext_resource type="Texture2D" uid="uid://dtaipiitr5men" path="res://Assets/Art/title.png" id="2_1ehe0"]
[ext_resource type="Theme" uid="uid://basi5lxyxy175" path="res://Assets/Themes/Button/buttonMainMenu.tres" id="2_48xlc"]
[ext_resource type="AudioStream" uid="uid://c0utk104dqgq3" path="res://Assets/Audio/UIAccept.mp3" id="4_n45e2"]
[ext_resource type="AudioStream" uid="uid://q48pf4wdpbwm" path="res://Assets/Audio/UIMove.mp3" id="5_opfnp"]

[node name="MainMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1ehe0")

[node name="Content" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(800, 500)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -350.0
offset_top = -250.0
offset_right = 350.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 70

[node name="TextureRect" type="TextureRect" parent="Content"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("2_1ehe0")
stretch_mode = 5

[node name="Buttons" type="VBoxContainer" parent="Content"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
theme_override_constants/separation = 40

[node name="Start" type="Button" parent="Content/Buttons"]
layout_mode = 2
size_flags_vertical = 4
mouse_default_cursor_shape = 2
theme = ExtResource("2_48xlc")
text = "Start"

[node name="Options" type="Button" parent="Content/Buttons"]
layout_mode = 2
size_flags_vertical = 4
mouse_default_cursor_shape = 2
theme = ExtResource("2_48xlc")
text = "Options"

[node name="Quit" type="Button" parent="Content/Buttons"]
process_mode = 3
layout_mode = 2
size_flags_vertical = 4
mouse_default_cursor_shape = 2
theme = ExtResource("2_48xlc")
text = "Quit"

[node name="Audio" type="Node" parent="."]

[node name="Accept" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("4_n45e2")
bus = &"Sfx"

[node name="Move" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("5_opfnp")
bus = &"Sfx"

[connection signal="button_down" from="Content/Buttons/Start" to="." method="_on_start_button_down"]
[connection signal="focus_entered" from="Content/Buttons/Start" to="." method="_on_focus_entered"]
[connection signal="mouse_entered" from="Content/Buttons/Start" to="." method="_on_focus_entered"]
[connection signal="button_down" from="Content/Buttons/Options" to="." method="_on_options_button_down"]
[connection signal="focus_entered" from="Content/Buttons/Options" to="." method="_on_focus_entered"]
[connection signal="mouse_entered" from="Content/Buttons/Options" to="." method="_on_focus_entered"]
[connection signal="button_down" from="Content/Buttons/Quit" to="." method="_on_quit_button_down"]
[connection signal="focus_entered" from="Content/Buttons/Quit" to="." method="_on_focus_entered"]
[connection signal="mouse_entered" from="Content/Buttons/Quit" to="." method="_on_focus_entered"]
